working on things.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,5 @@
 
 // Your custom code goes here...
 @include pictos-iconmask('calendar2');
+@include pictos-iconmask('doc_new');
+@include pictos-iconmask('doc_delete');
