Updating visuals on several views and adding new logo.
Signed-off-by: Louis Alridge <loualrid@gmail.com>

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,3 +20,6 @@
 @include pictos-iconmask('calendar2');
 @include pictos-iconmask('doc_new');
 @include pictos-iconmask('doc_delete');
+
+#ext-element-35 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
+#ext-element-79 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
