adding css and scss files

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,7 @@
 @include pictos-iconmask('calendar2');
 @include pictos-iconmask('doc_new');
 @include pictos-iconmask('doc_delete');
+@include pictos-iconmask('chart2');
 
 #ext-element-35 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
 #ext-element-79 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
