fixing issues with TrakerLocation.js and graphical updates
Signed-off-by: Louis Alridge <loualrid@gmail.com>

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,3 +24,5 @@
 
 #ext-element-35 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
 #ext-element-79 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
+#ext-element-104 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#1d82c8));}
+
