--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,7 +22,6 @@
 @include pictos-iconmask('doc_delete');
 @include pictos-iconmask('chart2');
 
-#ext-element-35 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
-#ext-element-79 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
-#ext-element-104 {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#1d82c8));}
-
+.x-translatable-container {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
+.x-translatable {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#1d82c8), color-stop(100%,#FFFFFF));}
+.x-form-label {background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#1d82c8));}
